# FGBS_academy

./: .gitignore  404.html  FLOW_DOCUMENTATION.md  Progetto.txt  README.md  index.html
quiz_generator/: .dockerignore  .gitignore  BUILD_SECRETS.md  DOCKER_README.md  Dockerfile  FLOW_DOCUMENTATION.md  FLOW_IMPLEMENTATION.md  HEALTHCHECK.md  README.md  crewai_flow.html  docker-compose.yml  mkdocs.yml  output.txt  pyproject.toml  requirements.txt  run_tests.bat  test_azure_ai900.py  test_blank_quiz.py  test_complete_flow.py  test_config.json  test_quick.py  test_quiz_taker.py
quiz_generator/.secrets/: .gitignore
quiz_generator/docs/: accuracy-lifecycle.md  application-functionality.md  conf.py  configuration.rst  cybersecurity.md  datasets.md  deployment-plan.md  eu-declaration-of-conformity.md  examples.rst  general-information.md  human-oversight.md  index.md  infra-and-env.md  installation.rst  integrations.md  key-links.md  lifecycle-management.md  models.md  quickstart.rst  risk-classification.md  risk-mitigation-measures.md  robustness.md  standards-applied.md
quiz_generator/outputs/: AI_102_document_intelligence_completed_quiz.md  AI_102_document_intelligence_questions.json  AI_102_document_intelligence_quiz.md  AI_102_document_intelligence_template.md  AI_102_foundry_foundry_local_questions.json  AI_102_foundry_foundry_local_quiz.md  AI_102_foundry_foundry_local_template.md  AI_102_speech_service_completed_quiz.md  AI_102_speech_service_questions.json  AI_102_speech_service_quiz.md  AI_102_speech_service_template.md  AI_900_luis_completed_quiz.md  quiz.md  (+10 more)
(+90 files in other folders)
