[project]
name = "quiz_generator"
version = "0.1.0"
description = "quiz_generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0",
    "markdown-pdf>=1.9",
    "markdown2>=2.5.4",
    "md2pdf>=1.0.1",
    "pdfkit>=1.0.0",
    "jsonpatch>=1.33",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langchain-openai>=0.2.14",
    "openai>=1.106.1",
    "qdrant-client>=1.15.1",
]
[project.scripts]
kickoff = "quiz_generator.main:kickoff"
run_crew = "quiz_generator.main:kickoff"
plot = "quiz_generator.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
